--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "docker-ip-get": "^1.1.5",
     "envalid": "^7.2.2",
     "express": "^4.17.1",
     "got": "^11.8.3",
