--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "envalid": "^7.2.2",
     "express": "^4.17.1",
     "got": "^11.8.3",
+    "moment": "^2.29.1",
     "safe-compare": "^1.1.4",
     "telegraf": "^4.4.2"
   },
