--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "envalid": "^7.2.2",
     "express": "^4.17.1",
     "got": "^11.8.3",
+    "js-base64": "^3.7.2",
     "moment": "^2.29.1",
     "safe-compare": "^1.1.4",
     "telegraf": "^4.4.2"
