--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "@sentry/node": "^6.16.1",
+    "chunk-text": "^2.0.1",
     "docker-ip-get": "^1.1.5",
     "envalid": "^7.2.2",
     "express": "^4.17.1",
@@ -25,6 +26,7 @@
     "telegraf": "^4.4.2"
   },
   "devDependencies": {
+    "@types/chunk-text": "^1.0.0",
     "@types/express": "^4.17.13",
     "@types/node": "^16.11.9",
     "@types/safe-compare": "^1.1.0",
