--- a/package.json
+++ b/package.json
@@ -23,15 +23,15 @@
     "js-base64": "^3.7.2",
     "moment": "^2.29.1",
     "safe-compare": "^1.1.4",
-    "telegraf": "^4.4.2"
+    "telegraf": "^4.4.2",
+    "esbuild": "^0.14.2",
+    "typescript": "^4.5.2"
   },
   "devDependencies": {
     "@types/chunk-text": "^1.0.0",
     "@types/express": "^4.17.13",
     "@types/node": "^16.11.9",
     "@types/safe-compare": "^1.1.0",
-    "esbuild": "^0.14.2",
-    "nodemon": "^2.0.15",
-    "typescript": "^4.5.2"
+    "nodemon": "^2.0.15"
   }
 }
