--- a/package.json
+++ b/package.json
@@ -18,13 +18,14 @@
     "chunk-text": "^2.0.1",
     "docker-ip-get": "^1.1.5",
     "envalid": "^7.2.2",
+    "esbuild": "^0.14.2",
     "express": "^4.17.1",
     "got": "^11.8.3",
     "js-base64": "^3.7.2",
     "moment": "^2.29.1",
+    "redis": "^4.0.6",
     "safe-compare": "^1.1.4",
     "telegraf": "^4.4.2",
-    "esbuild": "^0.14.2",
     "typescript": "^4.5.2"
   },
   "devDependencies": {
