--- a/.github/workflows/build_docker_image.yml
+++ b/.github/workflows/build_docker_image.yml
@@ -12,7 +12,7 @@ jobs:
       -
         name: Checkout
         uses: actions/checkout@v3
-      
+
       -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v2
@@ -23,6 +23,14 @@ jobs:
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
+      - name: Cache Docker layers
+        uses: actions/cache@v2
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-
+
       - id: repository_name
         uses: ASzc/change-string-case-action@v2
         with:
@@ -30,7 +38,7 @@ jobs:
 
       -
         name: Login to ghcr.io
-        uses: docker/login-action@v2 
+        uses: docker/login-action@v2
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
@@ -48,8 +56,20 @@ jobs:
           tags: ghcr.io/${{ env.IMAGE }}:latest
           context: .
           file: ./docker/build.dockerfile
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache-new
 
-      - 
+      # This ugly bit is necessary if you don't want your cache to grow forever
+      # until it hits GitHub's limit of 5GB.
+      # Temp fix
+      # https://github.com/docker/build-push-action/issues/252
+      # https://github.com/moby/buildkit/issues/1896
+      - name: Move cache
+        run: |
+          rm -rf /tmp/.buildx-cache
+          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
+
+      -
         name: Invoke deployment hook
         uses: joelwmale/webhook-action@master
         with:
