--- a/.github/workflows/build_docker_image.yml
+++ b/.github/workflows/build_docker_image.yml
@@ -44,7 +44,7 @@ jobs:
           IMAGE: ${{ steps.repository_name.outputs.lowercase }}
         with:
           push: true
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64
           tags: ghcr.io/${{ env.IMAGE }}:latest
           context: .
           file: ./docker/build.dockerfile
