--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,3 +27,4 @@ dateparser = "0.2.0"
 sentry = "0.31.3"
 lazy_static = "1.4.0"
 moka = { version = "0.11.1", features = ["future"] }
+axum = "0.6.18"
