--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,3 +28,4 @@ sentry = "0.31.3"
 lazy_static = "1.4.0"
 moka = { version = "0.11.1", features = ["future"] }
 axum = "0.6.18"
+smallvec = "1.10.0"
