--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,3 +29,4 @@ lazy_static = "1.4.0"
 moka = { version = "0.11.1", features = ["future"] }
 axum = "0.6.18"
 smallvec = { version = "1.10.0", features = ["serde"] }
+smartstring = { version = "1.0.1", features = ["serde"] }
