--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,3 +30,6 @@ moka = { version = "0.11.1", features = ["future"] }
 axum = "0.6.18"
 smallvec = { version = "1.10.0", features = ["serde"] }
 smartstring = { version = "1.0.1", features = ["serde"] }
+tokio-stream = "0.1.14"
+tower = "0.4.13"
+tower-http = "0.4.3"
