--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,4 +32,4 @@ smallvec = { version = "1.10.0", features = ["serde"] }
 smartstring = { version = "1.0.1", features = ["serde"] }
 tokio-stream = "0.1.14"
 tower = "0.4.13"
-tower-http = "0.4.3"
+tower-http = { version = "0.4.3", features = ["trace"] }
