--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ textwrap = "0.16.0"
 regex = "1.8.3"
 chrono = "0.4.25"
 dateparser = "0.2.0"
-sentry = "0.31.3"
+sentry = { version = "0.31.3", features = ["debug-images"] }
 moka = { version = "0.11.1", features = ["future"] }
 axum = "0.6.18"
 smallvec = { version = "1.10.0", features = ["serde"] }
