--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,6 @@ tokio = { version = "1.28.2", features = ["rt-multi-thread", "macros"] }
 reqwest = { version = "0.11.18", features = ["json"] }
 serde = { version = "1.0.163", features = ["derive"] }
 serde_json = "1.0.96"
-log = "0.4.18"
-pretty_env_logger = "0.5.0"
 teloxide = { version = "0.12.2", features = ["macros", "webhooks-axum", "cache-me", "throttle"] }
 url = "2.3.1"
 ctrlc = { version = "3.4.0", features = ["termination"] }
@@ -30,6 +28,8 @@ axum = "0.6.18"
 smallvec = { version = "1.10.0", features = ["serde"] }
 smartstring = { version = "1.0.1", features = ["serde"] }
 tokio-stream = "0.1.14"
+tracing = "0.1.37"
+tracing-subscriber = { version = "0.3.17", features = ["env-filter"]}
 tower = "0.4.13"
 tower-http = { version = "0.4.3", features = ["trace"] }
 once_cell = "1.18.0"
