--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros"] }
 reqwest = { version = "0.11.20", features = ["json"] }
 serde = { version = "1.0.186", features = ["derive"] }
 serde_json = "1.0.105"
-teloxide = { version = "0.12.2", features = ["macros", "webhooks-axum", "cache-me", "throttle"] }
+teloxide = { git = "https://github.com/teloxide/teloxide.git", branch="master", features = ["macros", "webhooks-axum", "cache-me", "throttle"] }
 url = "2.4.0"
 ctrlc = { version = "3.4.0", features = ["termination"] }
 strum = "0.25.0"
