--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,3 +33,4 @@ tracing-subscriber = { version = "0.3.18", features = ["env-filter"]}
 tower = "0.4.13"
 tower-http = { version = "0.4.4", features = ["trace"] }
 once_cell = "1.19.0"
+axum-prometheus = "0.4.0"
