--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ tower = "0.5.2"
 tower-http = { version = "0.6.2", features = ["trace"] }
 
 tracing = "0.1.41"
-tracing-subscriber = { version = "0.3.19", features = ["env-filter"]}
+tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 sentry-tracing = "0.36.0"
 
 reqwest = { version = "0.12.15", features = ["json", "stream"] }
@@ -28,7 +28,12 @@ reqwest = { version = "0.12.15", features = ["json", "stream"] }
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
 
-teloxide = { version = "0.15.0", features = ["macros", "webhooks-axum", "cache-me", "throttle"] }
+teloxide = { version = "0.16.0", features = [
+    "macros",
+    "webhooks-axum",
+    "cache-me",
+    "throttle",
+] }
 
 url = "2.5.4"
 
@@ -48,4 +53,4 @@ smartstring = { version = "1.0.1", features = ["serde"] }
 
 moka = { version = "0.12.10", features = ["future"] }
 
-sentry = { version = "0.36.0", features = ["debug-images"] }
+sentry = { version = "0.40.0", features = ["debug-images"] }
