Refactor error handling to use anyhow throughout codebase
Switch all custom error types and handler signatures from `Box<dyn
std::error::Error + Send + Sync>` to `anyhow::Result`. Add anyhow as a
dependency. Fix typos and update function names for consistency.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -54,3 +54,4 @@ smartstring = { version = "1.0.1", features = ["serde"] }
 moka = { version = "0.12.10", features = ["future"] }
 
 sentry = { version = "0.40.0", features = ["debug-images"] }
+anyhow = "1.0.98"
